refactor: should not restrict parent
